@@ -1,3 +1,8 @@
+2012-10-29 Srecko Morovic <srecko.morovic@cern.ch>
+
+	* tag V00-02-19
+	* Total input rate 1D plot
+
 2012-10-11 Srecko Morovic <srecko.morovic@cern.ch>
 
 	* tag V00-02-18
